tests/files/success/object_assignment.rl
let x = {
    y: 1
};

print(x.y);

x.y = 2;

print(x.y);
