tests/files/fail/function_object.rl
fn test() {
    print("test");
}

let x = {
    field: test,
};

print(x);
